[package]
name = "vedirect"
version = "0.1.0"
description = ""
authors = ["Robert Jördens <rj@quartiq.de>"]
license = "MIT OR Apache-2.0"
homepage = "https://github.com/jordens/vedirect"
repository = "https://github.com/jordens/vedirect.git"
documentation = "https://docs.rs/vedirect"
edition = "2021"

[dependencies]
anyhow = { version = "1.0.65" } #, features = ["backtrace"] }
env_logger = "0.9.1"
log = { version = "0.4.17", features = ["max_level_debug", "release_max_level_info"] }
pico-args = "0.5.0"
thiserror = "1.0.37"
# tokio-serial = "5.4.1"
heapless = "0.7.16"
num_enum = "0.6"
bitflags = "2.1"
# tokio = { version = "^1.0", features = ["macros", "rt", "process", "time", "fs", "io-util"], default-features = false}
serialport = "4.2"
derive_more = "0.99"

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
